--- a/jumps.umbraco.usync/jumps.umbraco.usync_4.csproj
+++ b/jumps.umbraco.usync/jumps.umbraco.usync_4.csproj
@@ -111,13 +111,8 @@
     </PreBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PostBuildEvent>@ECHO - Coping to package folder.
-@XCOPY "$(TargetPath)" "$(SolutionDir)\Package\uSync\"  /y /i /q
-@XCOPY "$(ProjectDir)uSyncSettings.config"  "$(SolutionDir)\Package\uSync\"  /y /i /q
-@XCOPY "$(ProjectDir)package.xml" "$(SolutionDir)\Package\uSync\"  /y /i /q
-
-call $(SolutionDir)\ToUmbracoInstall.cmd "$(TargetPath)" bin
-call $(SolutionDir)\ToUmbracoInstall.cmd  "$(ProjectDir)uSyncSettings.config" config</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
